--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "George Isiguzo",
   "license": "ISC",
   "dependencies": {
+    "async-throttle": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "node-fetch": "^3.2.0"
