--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-loadingg": "^1.7.2",
     "react-scripts": "5.0.0",
+    "rodal": "^1.8.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
